# reportlab-json-renderer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DESIGN.md  LICENSE  README.md  pdf-generator.md  pyproject.toml  test_new_components.py
.github/workflows/: ci.yml  publish.yml
docs/: custom-blocks.md  custom-templates.md  custom-themes.md  implementation-checklist.md  json-schema.md  release-readiness-checklist.md
reportlab_json_renderer/: __init__.py  cli.py  renderer.py
reportlab_json_renderer/assets/: __init__.py
reportlab_json_renderer/blocks/: __init__.py  badge.py  base.py  callout.py  callout_group.py  chart.py  comparison_card.py  divider.py  image.py  insight_list.py  kpi_grid.py  layout.py  markdown_block.py  matrix_table.py  metric_delta.py  milestone_list.py  page_break.py  paragraph.py  recommendations.py  registry.py  rich_text.py  risk_register.py  section.py  spacer.py  status_table.py  summary_box.py  table.py  timeline.py  title.py
reportlab_json_renderer/schema/: __init__.py  base.py  constants.py  validators.py
reportlab_json_renderer/templates/: __init__.py  analytics_report_v1.py  base.py  business_report_v1.py  compact_report_v1.py  invoice_v1.py  proposal_v1.py  registry.py
reportlab_json_renderer/themes/: __init__.py  base.py  dark.py  green.py  limetray_green.py  (+2 more)
skills/: SKILLS.md
tests/: conftest.py  test_block_renderers.py  test_blocks.py  test_charts.py  test_cli.py  test_colors.py  test_edge_validation.py  test_golden.py  test_images.py  test_renderer.py  test_schema.py  test_smoke_components.py  test_templates.py  test_text.py  test_themes.py  test_units.py
(+25 files in other folders)
